--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="CSS/main.css">
   </head>
   <body>
+    <script src="JS/load.js" type="text/javascript"></script>
     <div id="head">
       <div id="sitelogo">
         Факты про Котиков🐾
@@ -16,10 +17,8 @@
     <div id="main">
 
       <img src="CSS/img/images.jpg" alt="no image!">
-      <p>Тема: Британский кот</p><br>
-      У фелинологов до сих пор нет единого мнения о происхождении британских котов. По одной из версий они получили гены от французской породы «шартрез», поскольку именно эти животные вместе с предками «британцев» были завезены в Европу из Африки на военных и торговых судах. По другой версии, которая считается более вероятной, британская порода кошек появилась от смешения римских кошек, привезённых в Британию легионерами, и местных диких сородичей.
-
-До того, как развитием породы занялись фелинологии, предки современных «британцев» использовались как крысоловы – сначала на кораблях, охраняя товары и провизию, хранившиеся в трюмах, потом на земле – в домах местных крестьян. До конца XIX века порода формировалась естественным путём. После нескольких столетий проживания в Британии эти кошки уже ничем не напоминали особей римского происхождения – грациозных и длинноногих. «Британцы» были плотного телосложения с круглой мордочкой и мягкой, как плюш, голубой шерстью, которая на тот момент была единственным правильным вариантом окраса.На лондонской выставке в 1871 году, где породу впервые официально представили широкой публике и специалистам, домашним питомцам удалось привлечь к себе внимание не только замечательными внешними данными, но и прекрасными манерами. Успех был настолько сильным, что на следующий день фото британской кошки Олд Леди появилось в лондонских газетах. Это событие стало точкой отсчёта «новой» истории британской породы. При разведении заводчикам удалось добиться огромного разнообразия окрасов британских кошек. Наиболее распространёнными, помимо голубого, стали табби (пятнистая расцветка с белой отметиной в виде буквы «м» на лбу), черепаховый и белый цвета шерсти. Всего же их более 100 вариантов.
+      <p id="info">Тема: Британский кот</p><br>
+      <p id="p1">У фелинологов до сих пор нет единого мнения о происхождении британских котов. По одной из версий они получили гены от французской породы «шартрез», поскольку именно эти животные вместе с предками «британцев» были завезены в Европу из Африки на военных и торговых судах. По другой версии, которая считается более вероятной, британская порода кошек появилась от смешения римских кошек, привезённых в Британию легионерами, и местных диких сородичей.До того, как развитием породы занялись фелинологии, предки современных «британцев» использовались как крысоловы – сначала на кораблях, охраняя товары и провизию, хранившиеся в трюмах, потом на земле – в домах местных крестьян. До конца XIX века порода формировалась естественным путём. После нескольких столетий проживания в Британии эти кошки уже ничем не напоминали особей римского происхождения – грациозных и длинноногих. «Британцы» были плотного телосложения с круглой мордочкой и мягкой, как плюш, голубой шерстью, которая на тот момент была единственным правильным вариантом окраса.На лондонской выставке в 1871 году, где породу впервые официально представили широкой публике и специалистам, домашним питомцам удалось привлечь к себе внимание не только замечательными внешними данными, но и прекрасными манерами. Успех был настолько сильным, что на следующий день фото британской кошки Олд Леди появилось в лондонских газетах. Это событие стало точкой отсчёта «новой» истории британской породы. При разведении заводчикам удалось добиться огромного разнообразия окрасов британских кошек. Наиболее распространёнными, помимо голубого, стали табби (пятнистая расцветка с белой отметиной в виде буквы «м» на лбу), черепаховый и белый цвета шерсти. Всего же их более 100 вариантов.</p>
     </div>
   </body>
 </html>
