--- a/home.html
+++ b/home.html
@@ -2,9 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="CSS/home.css">
     <title></title>
   </head>
   <body>
-Не работает!!
+    <div id="head">
+      <div id="sitelogo">
+        Факты про Котиков🐾
+        <a href="home.html">Главная</a>
+        <a href="breed.html">Породы кошек</a>
+      </div>
+    </div>
+    <div id="back">
+      <div id="logo">
+
+      </div>
+    </div>
   </body>
 </html>
