--- a/breed.html
+++ b/breed.html
@@ -19,7 +19,7 @@
         <div class="i_breed">
           <details>
             <summary>А</summary><hr>
-            <a onclick="cat(text)" class="l_breed" href="#"><p>Абиссинская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="index.html"><p>Абиссинская</p></a>
             <a class="l_breed" href="#"><p>Австралийский мист</p></a>
             <a class="l_breed" href="#"><p>Американский бобтейл длинношёрстный</p></a>
             <a class="l_breed" href="#"><p>Американский бобтейл короткошёрстный</p></a>
