--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/main.css">
   </head>
   <body>
-    <script src="JS/load.js" type="text/javascript"></script>
+    <script src="JS/upload.js" type="text/javascript"></script>
     <div id="head">
       <div id="sitelogo">
         Факты про Котиков🐾
