--- a/breed.html
+++ b/breed.html
@@ -10,7 +10,7 @@
     <div id="head">
       <div id="sitelogo">
         Факты про Котиков🐾
-        <a href="home.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="breed.html">Породы кошек</a>
       </div>
     </div>
@@ -20,15 +20,11 @@
           <details>
             <summary>А</summary><hr>
             <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Абиссинская</p></a>
-            <a class="l_breed" href="#"><p>Австралийский мист</p></a>
-            <a class="l_breed" href="#"><p>Американский бобтейл длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Американский бобтейл короткошёрстный</p></a>
-            <a class="l_breed" href="#"><p>Американская жесткошёрстная</p></a>
-            <a class="l_breed" href="#"><p>Американский кёрл длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Американский кёрл короткошёрстный</p></a>
-            <a class="l_breed" href="#"><p>Американская короткошёрстная</p></a>
-            <a class="l_breed" href="#"><p>Анатолийская</p></a>
-            <a class="l_breed" href="#"><p>Аравийский мау</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Австралийский мист</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Американский бобтейл</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Американский кёрл</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Анатолийская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Аравийский мау</p></a>
           </details>
         </div>
       </div>
@@ -36,15 +32,13 @@
         <div class="i_breed">
           <details>
             <summary>Б</summary><hr>
-            <a class="l_breed" href="#"><p>Балинезийская</p></a>
-            <a class="l_breed" href="#"><p>Бенгальская</p></a>
-            <a class="l_breed" href="#"><p>Бомбейская</p></a>
-            <a class="l_breed" href="#"><p>Бразильская короткошёрстная</p></a>
-            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Британская длинношёрстная</p></a>
-            <a class="l_breed" href="#"><p>Британская короткошёрстная</p></a>
-            <a class="l_breed" href="#"><p>Бурма</p></a>
-            <a class="l_breed" href="#"><p>Бурмилла длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Бурмилла короткошёрстный</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Балинезийская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Бенгальская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Бомбейская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Бразильская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Британская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Бурма</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Бурмилла</p></a>
           </details>
         </div>
       </div>
@@ -52,8 +46,8 @@
         <div class="i_breed">
           <details>
             <summary>Г</summary><hr>
-            <a class="l_breed" href="#"><p>Гавана</p></a>
-            <a class="l_breed" href="#"><p>Гималайская кошка</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Гавана</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Гималайская кошка</p></a>
           </details>
         </div>
       </div>
@@ -61,9 +55,8 @@
         <div class="i_breed">
           <details>
             <summary>Д</summary><hr>
-            <a class="l_breed" href="#"><p>Девон рекс</p></a>
-            <a class="l_breed" href="#"><p>Домашняя</p></a>
-            <a class="l_breed" href="#"><p>Донской сфинкс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Девон рекс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Донской сфинкс</p></a>
           </details>
         </div>
       </div>
@@ -71,7 +64,7 @@
         <div class="i_breed">
           <details>
             <summary>Е</summary><hr>
-            <a class="l_breed" href="#"><p>Египетская мау</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Египетская мау</p></a>
           </details>
         </div>
       </div>
@@ -79,7 +72,7 @@
         <div class="i_breed">
           <details>
             <summary>Й</summary><hr>
-            <a class="l_breed" href="#"><p>Йорк</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Йорк</p></a>
           </details>
         </div>
       </div>
@@ -87,17 +80,15 @@
         <div class="i_breed">
           <details>
             <summary>К</summary><hr>
-            <a class="l_breed" href="#"><p>Калифорнийская сияющая</p></a>
-            <a class="l_breed" href="#"><p>Канаани</p></a>
-            <a class="l_breed" href="#"><p>Карельский бобтейл длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Карельский бобтейл короткошёрстный</p></a>
-            <a class="l_breed" href="#"><p>Кимрик</p></a>
-            <a class="l_breed" href="#"><p>Корат</p></a>
-            <a class="l_breed" href="#"><p>Корниш рекс</p></a>
-            <a class="l_breed" href="#"><p>Курильский бобтейл длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Курильский бобтейл короткошёрстный</p></a>
-            <a class="l_breed" href="#"><p>Кельтская</p></a>
-            <a class="l_breed" href="#"><p>Колорпойнт</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Калифорнийская сияющая</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Канаани</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Карельский бобтейл</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Кимрик</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Корат</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Корниш рекс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Курильский бобтейл</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Кельтская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Колорпойнт</p></a>
           </details>
         </div>
       </div>
@@ -105,8 +96,7 @@
         <div class="i_breed">
           <details>
             <summary>Л</summary><hr>
-            <a class="l_breed" href="#"><p>Лаперм длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Лаперм короткошёрстный</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Лаперм</p></a>
           </details>
         </div>
       </div>
@@ -114,11 +104,10 @@
         <div class="i_breed">
           <details>
             <summary>М</summary><hr>
-            <a class="l_breed" href="#"><p>Манчкин длинношёрстная</p></a>
-            <a class="l_breed" href="#"><p>Манчкин короткошёрстная</p></a>
-            <a class="l_breed" href="#"><p>Мейн-кун</p></a>
-            <a class="l_breed" href="#"><p>Меконгский бобтейл</p></a>
-            <a class="l_breed" href="#"><p>Мэнкс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Манчкин</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Мейн-кун</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Меконгский бобтейл</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Мэнкс</p></a>
           </details>
         </div>
       </div>
@@ -126,11 +115,11 @@
         <div class="i_breed">
           <details>
             <summary>Н</summary><hr>
-            <a class="l_breed" href="#"><p>Наполеон</p></a>
-            <a class="l_breed" href="#"><p>Немецкий рекс</p></a>
-            <a class="l_breed" href="#"><p>Нибелунг</p></a>
-            <a class="l_breed" href="#"><p>Норвежская лесная</p></a>
-            <a class="l_breed" href="#"><p>Невская маскарадная</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Наполеон</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Немецкий рекс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Нибелунг</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Норвежская лесная</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Невская маскарадная</p></a>
           </details>
         </div>
       </div>
@@ -138,12 +127,10 @@
         <div class="i_breed">
           <details>
             <summary>О</summary><hr>
-            <a class="l_breed" href="#"><p>Орегон-рекс</p></a>
-            <a class="l_breed" href="#"><p>Ориентальная длинношёрстная</p></a>
-            <a class="l_breed" href="#"><p>Ориентальная короткошёрстная</p></a>
-            <a class="l_breed" href="#"><p>Охос азулес</p></a>
-            <a class="l_breed" href="#"><p>Охос азулес длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Оцикет</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Орегон-рекс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Ориентальная</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Охос азулес</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Оцикет</p></a>
           </details>
         </div>
       </div>
@@ -151,10 +138,9 @@
         <div class="i_breed">
           <details>
             <summary>П</summary><hr>
-            <a class="l_breed" href="#"><p>Персидская </p></a>
-            <a class="l_breed" href="#"><p>Петерболд</p></a>
-            <a class="l_breed" href="#"><p>Пиксибоб длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Пиксибоб короткошёрстный</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Персидская </p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Петерболд</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Пиксибоб</p></a>
           </details>
         </div>
       </div>
@@ -162,9 +148,9 @@
         <div class="i_breed">
           <details>
             <summary>Р</summary><hr>
-            <a class="l_breed" href="#"><p>Рагамаффин</p></a>
-            <a class="l_breed" href="#"><p>Русская голубая</p></a>
-            <a class="l_breed" href="#"><p>Рэгдолл</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Рагамаффин</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Русская голубая</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Рэгдолл</p></a>
           </details>
         </div>
       </div>
@@ -172,20 +158,18 @@
         <div class="i_breed">
           <details>
             <summary>С</summary><hr>
-            <a class="l_breed" href="#"><p>Саванна</p></a>
-            <a class="l_breed" href="#"><p>Священная бирманская</p></a>
-            <a class="l_breed" href="#"><p>Сейшельская длинношёрстная</p></a>
-            <a class="l_breed" href="#"><p>Сейшельская короткошёрстная</p></a>
-            <a class="l_breed" href="#"><p>Селкирк рекс длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Селкирк рекс короткошёрстный</p></a>
-            <a class="l_breed" href="#"><p>Серенгети</p></a>
-            <a class="l_breed" href="#"><p>Сиамская</p></a>
-            <a class="l_breed" href="#"><p>Сибирская</p></a>
-            <a class="l_breed" href="#"><p>Скоттиш фолд</p></a>
-            <a class="l_breed" href="#"><p>Сноу-Шу</p></a>
-            <a class="l_breed" href="#"><p>Сококе</p></a>
-            <a class="l_breed" href="#"><p>Сомали</p></a>
-            <a class="l_breed" href="#"><p>Сфинкс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Саванна</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Священная бирманская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Сейшельская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Селкирк рекс</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Серенгети</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Сиамская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Сибирская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Скоттиш фолд</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Сноу-Шу</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Сококе</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Сомали</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Сфинкс</p></a>
           </details>
         </div>
       </div>
@@ -193,11 +177,11 @@
         <div class="i_breed">
           <details>
             <summary>Т</summary><hr>
-            <a class="l_breed" href="#"><p>Тайская</p></a>
-            <a class="l_breed" href="#"><p>Тойгер</p></a>
-            <a class="l_breed" href="#"><p>Тонкинская</p></a>
-            <a class="l_breed" href="#"><p>Турецкая ангора</p></a>
-            <a class="l_breed" href="#"><p>Турецкий ван</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Тайская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Тойгер</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Тонкинская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Турецкая ангора</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Турецкий ван</p></a>
           </details>
         </div>
       </div>
@@ -205,9 +189,8 @@
         <div class="i_breed">
           <details>
             <summary>У</summary><hr>
-            <a class="l_breed" href="#"><p>Украинский левкой</p></a>
-            <a class="l_breed" href="#"><p>Уральский рекс длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Уральский рекс короткошёрстный</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Украинский левкой</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Уральский рекс</p></a>
           </details>
         </div>
       </div>
@@ -215,7 +198,7 @@
         <div class="i_breed">
           <details>
             <summary>Ф</summary><hr>
-            <a class="l_breed" href="#"><p>Форин Вайт</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Форин Вайт</p></a>
           </details>
         </div>
       </div>
@@ -223,8 +206,8 @@
         <div class="i_breed">
           <details>
             <summary>Х</summary><hr>
-            <a class="l_breed" href="#"><p>Хайленд фолд</p></a>
-            <a class="l_breed" href="#"><p>Хауси</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Хайленд фолд</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Хауси</p></a>
           </details>
         </div>
       </div>
@@ -232,7 +215,7 @@
         <div class="i_breed">
           <details>
             <summary>Ц</summary><hr>
-            <a class="l_breed" href="#"><p>Цейлонская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Цейлонская</p></a>
           </details>
         </div>
       </div>
@@ -240,8 +223,8 @@
         <div class="i_breed">
           <details>
             <summary>Ш</summary><hr>
-            <a class="l_breed" href="#"><p>Шантильи-тиффани</p></a>
-            <a class="l_breed" href="#"><p>Шартрез</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Шантильи-тиффани</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Шартрез</p></a>
           </details>
         </div>
       </div>
@@ -249,8 +232,8 @@
         <div class="i_breed">
           <details>
             <summary>Э</summary><hr>
-            <a class="l_breed" href="#"><p>Эгейская</p></a>
-            <a class="l_breed" href="#"><p>Экзотическая</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Эгейская</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Экзотическая</p></a>
           </details>
         </div>
       </div>
@@ -258,9 +241,8 @@
         <div class="i_breed">
           <details>
             <summary>Я</summary><hr>
-            <a class="l_breed" href="#"><p>Яванез</p></a>
-            <a class="l_breed" href="#"><p>Японский бобтейл длинношёрстный</p></a>
-            <a class="l_breed" href="#"><p>Японский бобтейл короткошёрстный</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Яванез</p></a>
+            <a onclick="cat(text)" class="l_breed" href="cat.html"><p>Японский бобтейл</p></a>
           </details>
         </div>
       </div>
