--- a/cat.html
+++ b/cat.html
@@ -9,13 +9,13 @@
     <div id="head">
       <div id="sitelogo">
         Факты про Котиков🐾
-        <a href="home.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="breed.html">Породы кошек</a>
       </div>
     </div>
     <div id="main">
 
-      <img id="image" src="CSS/img/images.jpg" alt="no image!">
+      <img id="image" src="" alt="no image!">
       <p id="info"></p><br>
       <p id="gggg">
       </p>
