--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="head">
       <div id="sitelogo">
         Факты про Котиков🐾
-        <a href="home.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="breed.html">Породы кошек</a>
       </div>
     </div>
