--- a/cat.html
+++ b/cat.html
@@ -15,7 +15,7 @@
     </div>
     <div id="main">
 
-      <img id="image" src="" alt="no image!">
+      <img id="image" src="CSS/img/no_image.png" alt="no image!">
       <p id="info"></p><br>
       <p id="gggg">
       </p>
