--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </div>
     <div id="back">
       <div id="logo">
-
+        <p id="left_logo">Автор идеи: Анастасия Лаврова</p>
+        <p id="right_logo">Код и верстка: Якимов Савелий</p>
       </div>
     </div>
   </body>
